--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -1,4 +1,5 @@
 @import (less) "fontsampler-icons.css"; 
+@import (less) "../node_modules/fontsampler-js/dist/fontsampler-skin.css";
 @import "fontsampler-custom-selectric.less";
 @import "fontsampler-custom-rangeslider.less"; 
 
@@ -25,7 +26,7 @@
     //     transition: opacity 0.2s ease-in-out;
     // }
 
-    .fontsampler-interface {
+    &.fontsampler-interface {
         clear: both;
         display: flex;
         justify-content: space-between;
@@ -52,7 +53,7 @@
         }
 
         // different column layouts; define all
-        // .fontsampler-ui-blocks accordingly via mixin
+        // .fsjs-blocks accordingly via mixin
         &.columns-1 {
             .blocks(1);
         }
@@ -74,7 +75,7 @@
         }
  
         // any and all fontsampler UI elements are wrapped in this
-        .fontsampler-ui-block {
+        .fsjs-block {
             box-sizing: border-box;
             float: left;
             line-height: 1.2;
@@ -83,7 +84,7 @@
                 float: right;
             }
 
-            &.fontsampler-ui-block-fontsampler {
+            &.fsjs-block-tester {
                 height: auto;
                 width: 100%;
             }
@@ -148,7 +149,7 @@
         // several specific blocks:
 
         // dropdown for font family picker OR font family name if single font
-        .fontsampler-ui-block-fontpicker {
+        .fsjs-block-fontpicker {
 
             // single font: just display a label
             .fontsampler-font-label {
@@ -244,7 +245,7 @@
 }
 
 .blocks(@cols) {
-    .fontsampler-ui-block {
+    .fsjs-block {
         &.column {
             width: 100% / @cols !important;
         }
