--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -32,6 +32,10 @@
         justify-content: space-between;
         flex-wrap: wrap;
 
+        .fsjs-wrapper {
+            width: 100%;
+        }
+
         .fsjs-block {
             margin-left: 0;
             margin-right: 0;
@@ -241,6 +245,10 @@
                 }
             }
         }
+    }
+
+    [data-fsjs="alignment"] button {
+        font-family: "fontsampler-icons";
     }
 }
 
