Updated version numbers and supporters

--- a/includes/about.twig
+++ b/includes/about.twig
@@ -32,6 +32,12 @@
         <li><a href="https://andrewgraham.dev/">Andrew Graham</a></li>
         <li>Linh Nguyen</li>
         <li><a href="http://missbolddesign.com.au/">Miss Bold Design</a></li>
+        <li>Pedro Teixeira</li>
+        <li><a href="https://dtptypes.com/">DTP Types Limited</a></li>
+        <li>Association Beau Nageur</li>
+        <li><a href="https://arabictype.com/">Arabic Type</a></li>
+        <li>The New Co-operator</li>
+        <li>ERRØR TO THE THRONE</li>
     </ul>
     <p>For help with translating the plugin (language) my thanks goes to:</p>
     <ul class="real-list">
