--- a/includes/changelog.twig
+++ b/includes/changelog.twig
@@ -4,14 +4,15 @@
 <h1>Thanks for updating Fontsampler!</h1>
     <div class="text-box">
         <div class="notice notice-info">
-            <p>This update only includes minor improvements to Opentype feature detection. No action required, hurray!</p>
+            <p>This update only includes minor fixes and updated. You might want to check the alignment options of your Fontsamplers are displayed as intended. No other action required, hurray!</p>
         </div>
     </div>
     <h2>Here is what changed with this latest release:</h2>
     <div class="text-box">
         <ul class="real-list">
-            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Fixed an issue where a hyphen in a font name would prevent the style from rendering correctly</li>
-            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Made all font file resource requests protocol agnostic to avoid mixed content problems on misconfigured WP sites where the http/s setting differs from the saved Media Gallery file URL protocols</li>
+            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Fixed saving alignment settings in admin</li>
+            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Fontsamplers using the default alignment will now render correctly</li>
+            <li class="fontsampler-changelog-tweak"><strong>TWEAK:</strong> Updated Twig and Less libraries shipped with the plugin</li>
         </ul>
     </div>
     <br>
