Fix to JS assets, version bump

--- a/includes/changelog.twig
+++ b/includes/changelog.twig
@@ -7,9 +7,12 @@
             <p>This update only includes minor fixes and updated. You might want to check the alignment options of your Fontsamplers are displayed as intended. No other action required, hurray!</p>
         </div>
     </div>
-    <h2>Here is what changed with this latest release:</h2>
+    <h2>Here is what changed with this latest releases 0.4.10-0.4.12:</h2>
     <div class="text-box">
         <ul class="real-list">
+            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Minor fix to the loaded default CSS for the Fontsampler</li>
+            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Updates to Twig library and polyfills after some users reported PHP conflicts</li>
+            <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Fix failed compile of JS asset in plugin</li>
             <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Fixed saving alignment settings in admin</li>
             <li class="fontsampler-changelog-fix"><strong>FIX:</strong> Fontsamplers using the default alignment will now render correctly</li>
             <li class="fontsampler-changelog-tweak"><strong>TWEAK:</strong> Updated Twig and Less libraries shipped with the plugin</li>
